2000-07-06  Elena Zannoni  <ezannoni@kwikemart.cygnus.com>

        * TODO: Remove readline 4.1 import item.

2000-07-09  Nick Duffek  <nsd@redhat.com>

	* gdbtypes.c (is_ancestor): Infer type equivalence from name
	equivalence.
	(rank_one_type): Use strcmp instead of == to compare type names.
	Don't swap parm with arg when checking TYPE_CODE_REF types.
	* valops.c (find_overload_match): Fix indentation.  Compare
	parameter rankings to 0..9, 10..99, and 100+ instead of 0, 10,
	and 100.

2000-07-07  David Edelsohn  <edelsohn@gnu.org>

	* xcoffread.c (read_symbol_nvalue): Return CORE_ADDR.
	* rs6000-tdep.c (rs6000_pop_frame): Make addr CORE_ADDR type.

Fri Jul  7 18:29:51 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* config/mips/tm-mips.h (IEEE_FLOAT, SKIP_PROLOGUE,
 	SAVED_PC_AFTER_CALL, DECR_PC_AFTER_BREAK, BREAKPOINT_FROM_PC,
 	INNER_THAN): Macros.

	* mips-tdep.c (mips_in_lenient_prologue): Delete function.
	(mips32_skip_prologue, mips16_skip_prologue, mips_skip_prologue):
 	Remove ``lenient'' argument.
	(mips_saved_pc_after_call): New function.
 	(mips_gdbarch_init): Initialize gdbarch members inner_than,
 	breakpoint_from_pc, decr_pc_after_break, ieee_float,
 	skip_prologue, saved_pc_after_call.

2000-07-07  Mark Kettenis  <kettenis@gnu.org>

	* config/i386/tm-linux.h: Add longjmp support.
	(JB_ELEMENT_SIZE, JB_PC): New defines.
	(GET_LONGJMP_TARGET): Define.
	(get_longjmp_target): Add prototype.

	* breakpoint.c (bpstat_what): Keep returning
	BPSTAT_WHAT_SET_LONGJMP_RESUME when hitting multiple longjmp()
	breakpoints instead of signalling an error by returning
	BPSTAT_WHAT_STOP_NOISY.

2000-07-06  Michael Snyder  <msnyder@cleaver.cygnus.com>

	* mips-tdep.c: Replace '16' with bfd_mach_mips16 where appropriate.

2000-07-06  Christopher Faylor  <cgf@cygnus.com>

	* infcmd.c (attach_command): Move "stop_soon_quietly" setting
	inside ATTACH_NO_WAIT conditional since we are not about to
	stop soon if we're not calling wait_for_inferior.
