@@ -1,3 +1,9 @@
+Mon Jul 10 15:02:35 2000  Andrew Cagney  <cagney@b1.cygnus.com>
+
+	From 2000-07-05 Pierre Muller <muller@ics.u-strasbg.fr>:
+	* p-typeprint.c (pascal_type_print_method_args): Add braces around
+ 	isdigit after while keyword.
+
 2000-07-06  Elena Zannoni  <ezannoni@kwikemart.cygnus.com>
 
         * TODO: Remove readline 4.1 import item.
